force-app/main/default/objects/User/fields/ASI_Username__c.field-meta.xml
<CustomField>
    <fullName>ASI_Username__c</fullName>
    <label>ASI Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>