force-app/main/default/objects/User/fields/csr_Approver_Id__c.field-meta.xml
<CustomField>
    <fullName>csr_Approver_Id__c</fullName>
    <label>CSR Approver Id</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>