force-app/main/default/objects/User/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <description>Dealer Code Field Referenced in Community Dashboards Security Predicate</description>
    <formula>Contact.Dealer_Code__c</formula>
    <label>Dealer Code</label>
    <type>Text</type>
</CustomField>