force-app/main/default/objects/User/fields/Pass_Group_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Pass_Group_Permissions__c</fullName>
    <label>Pass Group Permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>General Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>