force-app/main/default/objects/User/fields/UserUid__c.field-meta.xml
<CustomField>
    <fullName>UserUid__c</fullName>
    <description>This is unique user identifier from Click system</description>
    <externalId>true</externalId>
    <label>UserUid</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>